# backend/server/restservice/restimpl.go
@@ -3,18 +3,15 @@ package restservice
 import (
 	"fmt"
 	"context"
-	"strings"
 
 	log "github.com/sirupsen/logrus"
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/runtime/middleware"
 
 	"isc.org/stork"
-	"isc.org/stork/server/database/model"
 	"isc.org/stork/server/gen/models"
 	"isc.org/stork/server/gen/restapi/operations/general"
 	"isc.org/stork/server/gen/restapi/operations/services"
-	"isc.org/stork/server/gen/restapi/operations/users"
 )
 
 
@@ -148,76 +145,6 @@ func (r *RestAPI) CreateMachine(ctx context.Context, params services.CreateMachi
 	m.Error = state.Error
 	rsp := services.NewCreateMachineOK().WithPayload(&m)
 
-	return rsp
-}
-
-// Attempts to login the user to the system.
-func (r *RestAPI) CreateSession(ctx context.Context, params users.CreateSessionParams) middleware.Responder {
-	user := &dbmodel.SystemUser{}
-	login := *params.Useremail
-	if strings.Contains(login, "@") {
-		user.Email = login
-	} else {
-		user.Login = login
-	}
-	user.Password = *params.Userpassword
-
-	ok, err := dbmodel.Authenticate(r.PgDB, user);
-	if ok {
-		err = r.SessionManager.LoginHandler(ctx, user)
-	}
-
-	if !ok || err != nil {
-		if err != nil {
-			log.Printf("%+v", err)
-		}
-		return users.NewCreateSessionBadRequest()
-	}
-
-	rspUserId := int64(user.Id)
-	rspUser := models.User{
-		ID: &rspUserId,
-		Login: &user.Login,
-		Email: &user.Email,
-		Firstname: &user.Name,
-		Lastname: &user.Lastname,
-	}
-
-	return users.NewCreateSessionOK().WithPayload(&rspUser)
-}
-
-// Attempts to logout a user from the system.
-func (r *RestAPI) DeleteSession(ctx context.Context, params users.DeleteSessionParams) middleware.Responder {
-	err := r.SessionManager.LogoutHandler(ctx)
-	if err != nil {
-		log.Printf("%+v", err)
-		return users.NewDeleteSessionBadRequest()
-	}
-	return users.NewDeleteSessionOK()
-}
-
-// Get users having an account in the system.
-func (r *RestAPI) GetUsers(ctx context.Context, params users.GetUsersParams) middleware.Responder {
-	usersList := []*models.User{}
-
-	email := "marcin@isc.org"
-	firstname := "Marcin"
-	var id int64 = 1
-	lastname := "Siodelski"
-	login := "msiodelski"
-	usersList = append(usersList, &models.User{
-		Email: &email,
-		Firstname: &firstname,
-		ID: &id,
-		Lastname: &lastname,
-		Login: &login,
-	})
-
-	u := models.Users{
-		Items: usersList,
-		Total: 10,
-	}
-	rsp := users.NewGetUsersOK().WithPayload(&u)
 	return rsp
 }
 
